@@ -8,6 +8,9 @@ Zope Changes
 
    Bugs fixed
 
+      - Collector #2288: @ and + should not be quoted when forming
+        request URLs in BaseRequest and HTTPRequest
+
       - Undeprectated 'zLOG' package, which is going to remain a
         backward-compatibility shim for the Python logger.
 
